--- a/src/main/resources/first-prototype.fxml
+++ b/src/main/resources/first-prototype.fxml
@@ -197,11 +197,9 @@
                      <children>
                         <TableView fx:id="inProceedingMainTable" layoutY="29.0" prefHeight="310.0" prefWidth="997.0">
                            <columns>
-                              <TableColumn prefWidth="283.0" text="Title" />
-                              <TableColumn prefWidth="75.0" text="Pages" />
-                              <TableColumn prefWidth="52.0" text="Year" />
-                              <TableColumn minWidth="0.0" prefWidth="244.0" text="Proceeding" />
-                              <TableColumn prefWidth="342.0" text="Authors" />
+                              <TableColumn prefWidth="582.0" text="Title" />
+                              <TableColumn minWidth="0.0" prefWidth="71.0" text="Year" />
+                              <TableColumn minWidth="0.0" prefWidth="338.0" text="Proceeding" />
                            </columns>
                         </TableView>
                         <TextField fx:id="inProceedingFilterField" layoutX="547.0" prefHeight="25.0" prefWidth="387.0" />
