--- a/src/main/resources/first-prototype.fxml
+++ b/src/main/resources/first-prototype.fxml
@@ -202,7 +202,7 @@
                               <TableColumn minWidth="0.0" prefWidth="338.0" text="Proceeding" />
                            </columns>
                         </TableView>
-                        <TextField fx:id="inProceedingFilterField" layoutX="547.0" prefHeight="25.0" prefWidth="387.0" />
+                        <TextField fx:id="inProceedingSearchField" layoutX="547.0" prefHeight="25.0" prefWidth="387.0" />
                         <Button fx:id="inProceedingSearchButton" layoutX="934.0" mnemonicParsing="false" text="Search" />
                         <Button fx:id="inProceedingDeleteButton" layoutX="152.0" layoutY="341.0" mnemonicParsing="false" text="Delete InProceeding" />
                         <Group layoutX="677.0" layoutY="341.0">
