--- a/src/main/resources/first-prototype.fxml
+++ b/src/main/resources/first-prototype.fxml
@@ -195,24 +195,17 @@
                <children>
                   <Group layoutX="14.0" layoutY="14.0">
                      <children>
-                        <TableView fx:id="inProceedingMainTable" layoutY="29.0" prefHeight="310.0" prefWidth="997.0">
-                           <columns>
-                              <TableColumn fx:id="inProceedingMainTableTitleColumn" prefWidth="582.0" text="Title" />
-                              <TableColumn fx:id="inProceedingMainTableYearColumn" minWidth="0.0" prefWidth="71.0" text="Year" />
-                              <TableColumn fx:id="inProceedingMainTableProceedingsColumn" minWidth="0.0" prefWidth="338.0" text="Proceeding" />
-                           </columns>
-                        </TableView>
+	                        <TableView fx:id="inProceedingMainTable" layoutY="29.0" onMouseClicked="#inProceedingsMainClickItem" prefHeight="310.0" prefWidth="997.0">
+	                           <columns>
+	                              <TableColumn fx:id="inProceedingMainTableTitleColumn" prefWidth="582.0" text="Title" />
+	                              <TableColumn fx:id="inProceedingMainTableYearColumn" minWidth="0.0" prefWidth="71.0" text="Year" />
+	                              <TableColumn fx:id="inProceedingMainTableProceedingsColumn" minWidth="0.0" prefWidth="338.0" text="Proceeding" />
+	                           </columns>
+	                        </TableView>
                         <TextField fx:id="inProceedingSearchField" layoutX="547.0" prefHeight="25.0" prefWidth="387.0" />
                         <Button fx:id="inProceedingSearchButton" layoutX="934.0" mnemonicParsing="false" text="Search" />
                         <Button fx:id="inProceedingDeleteButton" layoutX="152.0" layoutY="341.0" mnemonicParsing="false" text="Delete InProceeding" />
-                        <Group layoutX="677.0" layoutY="341.0">
-                           <children>
-                              <Button fx:id="inProceedingNextPageButton" layoutX="234.0" mnemonicParsing="false" text="Next Page" />
-                              <Button fx:id="inProceedingPreviousPageButton" mnemonicParsing="false" text="Previous Page" />
-                              <Label alignment="CENTER" layoutX="112.0" layoutY="5.0" prefHeight="16.0" prefWidth="38.0" text="Page" />
-                              <TextField fx:id="inProceedingCurrentPageField" layoutX="154.0" prefHeight="26.0" prefWidth="80.0" text="1" />
-                           </children>
-                        </Group>
+                        <Group layoutX="677.0" layoutY="341.0" />
                         <Button fx:id="inProceedingCreateButton" layoutY="341.0" mnemonicParsing="false" text="Create InProceeding" />
                      </children>
                   </Group>
@@ -243,7 +236,7 @@
                      <children>
                         <TableView fx:id="inProceedingAuthorTable" layoutY="16.0" prefHeight="280.0" prefWidth="315.0">
                            <columns>
-                              <TableColumn prefWidth="314.0" text="Name" />
+                              <TableColumn fx:id="inProceedingAuthorTableNameColumn" prefWidth="314.0" text="Name" />
                            </columns>
                         </TableView>
                         <Label text="Authors" />
